--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,13 @@
     "@prisma/client": "^6.3.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^22.13.1",
     "nodemon": "^3.1.9",
     "prisma": "^6.3.1",
