--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc"
+    "build": "prisma generate && tsc && mkdir -p data && prisma db push --accept-data-loss",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
