--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "prisma generate && tsc && mkdir -p data && prisma db push",
+    "build": "prisma generate && tsc && prisma db push",
     "postinstall": "prisma generate"
   },
   "keywords": [],
